--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^5.1.1",
     "@astrojs/prism": "^3.0.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.0",
     "@fontsource-variable/archivo": "^5.0.17",
     "astro": "^4.3.3",
     "htmlparser2": "^9.1.0",
