--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/cloudflare": "^9.0.0",
     "@astrojs/netlify": "^5.1.1",
     "@astrojs/prism": "^3.0.0",
     "@astrojs/tailwind": "^5.1.0",
