--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/cloudflare": "^9.0.0",
-    "@astrojs/netlify": "^5.1.1",
+    "@astrojs/preact": "^3.1.0",
     "@astrojs/prism": "^3.0.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.3.0",
     "@fontsource-variable/archivo": "^5.0.17",
     "astro": "^4.3.3",
     "htmlparser2": "^9.1.0",
+    "preact": "^10.19.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
