--- a/package.json
+++ b/package.json
@@ -10,23 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/cloudflare": "^9.0.0",
-    "@astrojs/preact": "^3.1.0",
-    "@astrojs/prism": "^3.0.0",
-    "@astrojs/react": "^3.0.10",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/archivo": "^5.0.17",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "astro": "^4.3.3",
-    "htmlparser2": "^9.1.0",
-    "preact": "^10.19.4",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-code-blocks": "^0.1.6",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "0.4.1",
+    "@astrojs/cloudflare": "9.0.0",
+    "@astrojs/react": "3.0.10",
+    "@astrojs/tailwind": "5.1.0",
+    "@fontsource-variable/archivo": "5.0.17",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "astro": "4.3.3",
+    "htmlparser2": "9.1.0",
+    "react": "18.2.0",
+    "react-code-blocks": "0.1.6",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
